--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 
 <head>
     <meta charset="utf-8">
-    <script async src="../../../../../../cdn.ampproject.org/v0.js"></script>
+    <script async src="/v0.js"></script>
     <!-- Needed to run amp stories -->
-    <script async custom-element="amp-story" src="../../../../../../cdn.ampproject.org/v0/amp-story-0.1.js"></script>
+    <script async custom-element="amp-story" src="/amp-story-0.1.js"></script>
     
     <!-- Needed to use videos -->
-    <script async custom-element="amp-video" src="../../../../../../cdn.ampproject.org/v0/amp-video-0.1.js"></script>
+    <script async custom-element="amp-video" src="/amp-video-0.1.js"></script>
 
     <!-- Needed for Analytics -->
-    <script async custom-element="amp-analytics" src="../../../../../../cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
+    <script async custom-element="amp-analytics" src="amp-analytics-0.1.js"></script>
 
     
     <title>Atari nos muestra el diseño de su nueva consola "Atari VCS" - News.ly</title>
